trying alignment fix

--- a/assets/css/publications.css
+++ b/assets/css/publications.css
@@ -81,7 +81,7 @@ blockquote { background: var(--global-bg-color); border-left: 2px solid var(--gl
 
 .publications ol.bibliography li div.abstract.hidden.open { border-color: var(--global-text-color); }
 
-.publications ol.bibliography li .teaser { border-radius: 8px; box-shadow: 3px 3px 6px #888; height: 123px; max-width: 120px; width: 100%; margin-top: 5px; margin-left: 5px; margin-bottom: 5px; object-fit: contain; }
+.publications ol.bibliography li .teaser { border-radius: 8px; box-shadow: 3px 3px 6px #888; height: 123px; width: 120px; margin-top: 5px; margin-left: 5px; margin-bottom: 5px; object-fit: contain; }
 
 /* BibTeX Button Styling */
 .publications ol.bibliography li .links button.bibtex-toggle { color: #000000; border: 1px solid #000000; padding-left: 0.5rem; padding-right: 0.5rem; padding-top: 0.1rem; padding-bottom: 0.1rem; background-color: transparent; cursor: pointer; font-size: 12px; font-family: initial; line-height: normal; }
